Feature ETP-3591: harden selector queries and reduce duplicated lines